# cnb-dictionary-creator

./: .gitignore  README.md  config.py  pyproject.toml
cnb_dictionary_creator/wiki_filter_1/: title_classifier.py  wiki_filter_1.py
cnb_oxford_dictionary/clue_filter/: clue_token_filter.py  clue_tokens_extractor.py  compound_clue_filter.py  sem_link_filter.py
cnb_oxford_dictionary/definitions_download/: download.py
cnb_oxford_dictionary/dictionary_creator/: create_dict.py  create_dicts.py
cnb_oxford_dictionary/download/: caches.py
cnb_oxford_dictionary/sentences_download/: download.py
cnb_oxford_dictionary/utils/: cross_references.py  definition.py  definitions.py  get_pos.py  knownness.py  sem_links.py  senses.py  sentences.py  tokenizer.py  word_forms.py
cnb_oxford_dictionary/word_freq_filter/: filter.py
cnb_oxford_dictionary/word_list_scraper/: compile_lemmas.py  scrape_lemmas.py  scraper.py
tests/data/: clue_tokens_extractor.json  wiki_filter_1.json  word_forms.json
tests/tests/: test_clue_tokens_extractor.py  test_wiki_filter_1.py  test_word_forms.py
tools/: word_freq.py
